@@ -87,7 +87,7 @@ ntuple_diskinfo = namedtuple('usage', 'total used free percent')
 ntuple_partition = namedtuple('partition',  'device mountpoint fstype')
 ntuple_net_iostat = namedtuple('iostat', 'bytes_sent bytes_recv packets_sent packets_recv')
 ntuple_disk_iostat = namedtuple('iostat', 'read_count write_count read_bytes write_bytes read_time write_time')
-ntuple_user = namedtuple('user', 'name terminal host started user_process')
+ntuple_user = namedtuple('user', 'name terminal host started')
 
 
 # processes
