@@ -5,7 +5,8 @@ Bug tracker at http://code.google.com/p/psutil/issues
 
 NEW FEATURES
 
- * Issue #52: process environment variables.
+ * Issue #52: (Linux, Windows) get process environment variables.
+ * Issue #229: list users currently connected on the system (psutil.get_users()).
  * Issue #238: (Linux, Windows) process CPU affinity (get and set).
  * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.
 
